# ESPeccy

./: .gitignore  CMakeLists.txt  CREDITS  ESPecpart2.csv  README.md  platformio.ini  sdkconfig.default  sdkconfig.nopsram
.github/: FUNDING.yml
.github/workflows/: build.yml
components/fabgl/: CMakeLists.txt  component.mk
components/fabgl/src/comdrivers/: ps2controller.cpp  ps2controller.h
components/fabgl/src/devdrivers/: kbdlayouts.cpp  kbdlayouts.h  keyboard.cpp
components/pwm_audio/: pwm_audio.c
docs/: Formatos Snapshot.md
include/: AySound.h  BIOS.h  BuildDate.h  CaptureBMP.h  Cheat.h  CommitDate.h  Config.h  ESPeccy.h  ESPectrum.h  FileUtils.h  KBDLayout.h  Keymap.h  MemESP.h  OSD.h  OSDMain.h  Ports.h  ROMLoad.h  RealTape.h  Snapshot.h  Tape.h  VidPrecalc.h  Video.h  ZXKeyb.h  commit_info.h  cpuESP.h  hardconfig.h  hardpins.h  images.h  loaders.h  messages.h  messages_en.h  messages_es.h  messages_pt.h  roms.h  tzx_headers.h  wd1793.h
include/Z80_JLS/: z80.h  z80operations.h
include/roms/: rom+2A+3_4.0.h  rom+2A+3_4.0es.h  rom+2A+3_4.1.h  rom+2A+3_4.1es.h  rom+2A+3custom.h  rom128Kcustom.h  rom48Kcustom.h  (+2 more)
kbdlayout/: US_KP.kbd  k1000.kbd
keymap/: k1000v2.map
src/: AySound.cpp  BIOS.cpp  BuildDate.cpp  CPU.cpp  CaptureBMP.cpp  Cheat.cpp  CommitDate.cpp  Config.cpp  ESPeccy.cpp  ESPectrum.cpp  FileUtils.cpp  Font.cpp  KBDLayout.cpp  Keymap.cpp  MemESP.cpp  OSDFile.cpp  OSDMain.cpp  OSDMenu.cpp  Ports.cpp  ROMLoad.cpp  RealTape.c  Roms.c  Snapshot.cpp  Tape.cpp  Tape_TZX.cpp  Video.cpp  Z80_JLS.cpp  ZXKeyb.cpp  main.cpp  wd1793.cpp
(+5 files in other folders)
